[package]
name = "webrtc"
version = "0.2.1"
edition = "2021"
authors = [ "Mr.Panda <xivistudios@gmail.com>" ]
description = "Facilitating high-level interactions between Rust and WebRTC"
readme = "./README.md"
homepage = "https://github.com/mycrl/librtc-rs"
repository = "https://github.com/mycrl/librtc-rs"
license = "MIT"
keywords = [
    "webrtc",
    "ffi"
]

categories = [
    "multimedia",
    "api-bindings",
    "asynchronous"
]

[dependencies]
anyhow = "1.0.52"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.tokio]
version = "1.20.0"
features = [ 
    "sync",
    "rt" 
]

[build-dependencies]
dotenv = "0.15.0"

[[example]]
name = "simple"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
serde_json = "1.0.61"
clap = { version = "4.0.27", features = ["derive"] }
minifb = "0.25"
libyuv = "0.1.2"
cpal = "0.15.2"
