[package]
name = "batrachia"
version = "0.1.0"
edition = "2021"
authors = [ "Mr.Panda <xivistudios@gmail.com>" ]
description = "Facilitating high-level interactions between Rust and WebRTC"
readme = "../README.md"
homepage = "https://github.com/mycrl/batrachia"
repository = "https://github.com/mycrl/batrachia"
license = "GPL-2.0-or-later"
keywords = [
    "webrtc",
    "google webrtc",
    "ffi"
]

categories = [
    "webrtc",
    "video",
    "audio",
    "media"
]

[dependencies]
libc = "0.2.121"
anyhow = "1.0.52"
futures = "0.3"

[dependencies.tokio]
version = "1.20.0"
features = [ 
    "sync",
    "rt" 
]

[build-dependencies]
cc = "1.0"

[build-dependencies.enver]
path = "../enver"
