[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
batrachia = { path = "../batrachia" }
tokio = { version = "1.20.0", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
clap = { version = "4.0.27", features = ["derive"] }
minifb = "0.23"
libyuv = { path = "../libyuv" }
