[package]
name = "librtc-rs"
version = "0.2.1"
edition = "2021"
authors = [ "Mr.Panda <xivistudios@gmail.com>" ]
description = "Facilitating high-level interactions between Rust and WebRTC"
readme = "./README.md"
homepage = "https://github.com/colourful-rtc/batrachia"
repository = "https://github.com/colourful-rtc/batrachia"
license = "GPL-2.0-or-later"
keywords = [
    "webrtc",
    "ffi"
]

categories = [
    "multimedia",
    "api-bindings",
    "asynchronous"
]

[dependencies]
anyhow = "1.0.52"
futures = "0.3"

[dependencies.tokio]
version = "1.20.0"
features = [ 
    "sync",
    "rt" 
]
